--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Document</title>
 </head>
 
-<body style="background-color: rgba(255, 255, 255, 255)">
+<body style="background-color: rgba(255, 255, 255, 255); text-align: center;">
 
+    <img src="assets/hero.jpg" alt="hero">
+
+    <p>Pixelize:</p>
     <img src="assets/hero15x.jpg" alt="hero" id="scream">
 
     <p>Canvas:</p>
