--- a/index.html
+++ b/index.html
@@ -20,12 +20,17 @@
     <button onclick="setPixelImage(64,32)">64 x 32</button>
     <button onclick="setPixelImage(32,64)">32 x 64</button>
     <button onclick="setPixelImage(64,64)">64 x 64</button>
+    <button onclick="setPixelImage(96,96)">96 x 96</button>
 
     <h2 id="h2Canvas"></h2>
     <canvas id="canvas"></canvas>
+    <br>
+    <br>
 
-    <br>
-    <br>
+    <h2 id="alsoLike"></h2>
+    <div class="options">
+        
+    </div>
 
 </body>
 
