--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <button onclick="setPixelImage(32,32)">32 x 32</button>
     <button onclick="setPixelImage(64,32)">64 x 32</button>
     <button onclick="setPixelImage(32,64)">32 x 64</button>
+    <button onclick="setPixelImage(64,96)">64 x 96</button>
+    <button onclick="setPixelImage(64,128)">64 x 128</button>
+    <button onclick="setPixelImage(96,160)">96 x 160</button>
+    <button onclick="setPixelImage(96,192)">96 x 192</button>
     <button onclick="setPixelImage(64,64)">64 x 64</button>
     <button onclick="setPixelImage(96,96)">96 x 96</button>
 
@@ -34,7 +38,6 @@
 
 </body>
 
-<!-- <script src="pixelize.js"></script> -->
 <script src="pixelize.js"></script>
 
 </html>
